[tool.poetry]
name = "asyncio-redis-rate-limit"
description = "Rate limiter for async functions using Redis as a backend"
version = "1.0.0"
license = "MIT"
readme = "README.md"

authors = [
  "Nikita Sobolev <mail@sobolevn.me>"
]

repository = "https://github.com/wemake-services/asyncio-redis-rate-limit"

keywords = [
  "asyncio",
  "rate-limiter",
  "redis",
  "redis-py",
  "aioredis",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Funding" = "https://github.com/sponsors/wemake-services"

[tool.poetry.dependencies]
python = "^3.8"

redis = { version = ">=4.5,<5", optional = true }
# aioredis and python3.11 are not compatible:
aioredis = { version = ">=2.0", optional = true, python = "<3.11" }
typing-extensions = ">=3.10"

[tool.poetry.group.test.dependencies]
mypy = "^1.2"
types-redis = "^4.5"
types-mock = "^5.0"

wemake-python-styleguide = "^0.17"
flake8-pytest-style = "^1.6"
nitpick = "^0.33"

safety = "^2.3"

pytest = "^7.2"
pytest-cov = "^4.0"
pytest-randomly = "^3.12"
pytest-asyncio = "^0.21"
pytest-freezegun = "^0.4"
pytest-repeat = "^0.9"

[tool.poetry.extras]
redis = ["redis"]
aioredis = ["aioredis"]
dev = ["redis", "aioredis"]


[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"
